--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.471.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
