--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build-production": "NODE_ENV=production tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
